# cleanprompt

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: pre-commit.yml  publish.yml  pytest.yml
docs/: Developer_notes.md
src/cleanprompt/: __init__.py  about.py  prompt.py
test/: test_clean.py  test_import.py
